--- a/package.json
+++ b/package.json
@@ -4,12 +4,14 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js"
   },
   "author": "Fabio Z Tessitore",
   "license": "ISC",
   "dependencies": {
     "express": "^4.15.2",
-    "socket.io": "^1.7.3"
+    "path": "^0.12.7",
+    "socket.io": "^2.3.0"
   }
 }
